<resources>
    <string name="app_name">Work Scheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="descriptive_icon">Descriptive Icons</string>
    <string name="posted_at_hint">Posted At</string>
    <string name="posted_by_hint">Posted By</string>
    <string name="price_range_hint">Price Range</string>
    <string name="contact_info_hint">Contact Info</string>
    <string name="location_hint">Location</string>
    <string name="deadline_hint">Deadline</string>
    <string name="accept_this_work_btn">Accept this work</string>
    <string name="work_description_hint">Work Description</string>
    <string name="you_have_accepted">You have accepted this work</string>
    <string name="you_haven_t_broadcast_any_work_yet">You haven\'t broadcast any work yet!</string>
    <string name="work_problem_description_hint">Work/Problem description</string>
</resources>
